--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,11 @@
             <artifactId>aws-java-sdk-sqs</artifactId>
             <version>1.12.160</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
 
         <!-- testing -->
         <dependency>
