--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,10 @@ updates:
   schedule:
     interval: daily
     time: "03:00"
+  ignore:
+    - dependency-name: "dropwizard-dependencies"
+      versions:
+        - ">= 4"
   open-pull-requests-limit: 10
   labels:
   - dependencies
